<resources>
    <string name="app_name">Calculator</string>
    <string name="First_Number"> First Number</string>
    <string name="Second_Number">Second Number</string>
    <string name="ans">TextView</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="answer">Answer</string>
    <string name="all_rights_are_reserved">Husnain Ali Rafique</string>
    <string name="dark">Dark</string>

</resources>