<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="148dp"
        android:layout_height="151dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/etFirstValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/First_Number"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etSecondValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/Second_Number"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:paddingTop="4dp"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#E7FF9800" />

    <Button
        android:id="@+id/btSubtract"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="-100dp"
        android:padding="5dp"
        android:paddingTop="4dp"
        android:text="@string/subtract"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#EFB811" />

    <Button
        android:id="@+id/btMultiply"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:text="@string/multiply"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="#0288D1" />

    <Button
        android:id="@+id/btDivide"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="-100dp"
        android:padding="5dp"
        android:text="@string/divide"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="#129818" />

</LinearLayout>